Modification du style des sections Accueil et Expérience

--- a/section-accueil/accueil.css
+++ b/section-accueil/accueil.css
@@ -105,6 +105,7 @@ h1 span {
     font-family: 'Inter', 'sans-serif';
     width: 200px;
     height: 40px;
+    text-decoration: none;
 }
 
 /* Logo des réseaux sociaux */
