--- a/section-formation/formation.css
+++ b/section-formation/formation.css
@@ -1,118 +1,143 @@
-/* ----- Section 4 : Formation & Expériences ----- */
+/* --------- Section Formation Modifié ------------- */
 
-.formation-experience {
-    position: relative;
-    padding-top: 100px;
-    padding-bottom: 0px;
-    padding-right: 25px;
-    padding-left: 25px;
-    overflow: hidden;
-}
-
-/* .formation-experience h2 {
-    color: #E4BFE1;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 30px;
-} */
-
-.liste-formation-experience {
-    display: flex;
-    flex: wrap;
-    flex-direction: column;
-    gap: 15px;
-}
-
-.container {
-    flex: 1;
-    min-width: 100%;
-    max-width: 100%;
-    /* min-height: 150px;
-    max-height: 150px; */
-    /* background-color: white; */
-    background-color: rgb(241, 241, 241);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
-    padding: 16px;
-    border-radius: 5px;
-}
-
-/* .box-purple {
-    background-color: #F9D3E8;
-} */
-
-.container + div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /* gap: 50px; */
-}
-
-.container span {
-    color: #342039;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 13px;
-    font-weight: 500;
-}
-
-.container h3 {
-    color: #342039;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 15px;
-    font-weight: 700;
-    line-height: 25px;
-    margin-top: 5px;
-    margin-bottom: 15px;
-    width: 100%;
-}
-
-.container div:nth-child(2) {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.container a {
-    display: block;
-    border-radius: 4px;
-    background: linear-gradient(90deg, #FD695D 0%, #FF2D87 100%);
-    padding: 9px;
-    color: white;
-    font-size: 12px;
-    width: 90px;
-    font-weight: 700;
-    text-decoration: none;
-    text-align: center;
-    font-family: 'Montserrat', 'sans-serif';
-}
-
-.container img {
-    object-fit: contain;
-}
-
-
-#cercle-shadow-pink-experience {
-    position: absolute;
-    border-radius: 585px;
-    background: #B43B85;
-    width: 585px;
-    height: 585px;
-    top: 2400px;
-    left: 250px;
-    filter: blur(150px);
-    overflow: hidden;
-    z-index: -1;
-}
-
-#cercle-shadow-purple-experience {
+#cercle-shadow-purple-formation {
     position: absolute;
     border-radius: 585px;
     background: #542897; 
     width: 585px;
     height: 585px;
-    top: 3000px;
-    right: 145px;
+    top: 2400px;
+    left: 191px;
     filter: blur(182px);
     overflow: hidden;
     z-index: -1;
+}
+
+#cercle-shadow-pink-formation {
+    position: absolute;
+    border-radius: 585px;
+    background: #B43B85;
+    width: 585px;
+    height: 585px;
+    top: 3300px;
+    right: 277px;
+    filter: blur(182px);
+    overflow: hidden;
+    z-index: -1;
+}
+
+.formation {
+    position: relative;
+    padding-top: 100px;
+    padding-bottom: 0px;
+    padding-right: 25px;
+    padding-left: 25px;
+}
+
+.liste-formation {
+    margin-top: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 60px;
+}
+
+.formation-left {
+    flex: 1;
+    min-width: 100%;
+    max-width: 100%;
+    position: relative;
+}
+
+.formation-right {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    text-align: end;
+}
+
+/* Cibler le cercle noir */
+.formation-left div:nth-child(2), .derniere-formation div:first-child {
+    position: relative;
+    background-color: black;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    text-align: center;
+    margin-bottom: 5px;
+}
+
+/* Cibler le chiffre rose dans le cercle noir */
+.formation-left div:nth-child(2) span, .derniere-formation div:first-child span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #FF2D87;
+    font-family: 'Inter', sans-serif;
+    font-size: 22px;
+    font-weight: 700;
+}
+
+/* Cibler le span de la date */
+.formation-left span:nth-child(3), .derniere-formation span:nth-child(2) {
+    color: white;
+    font-size: 15px;
+    font-weight: 300;
+}
+
+/* Cibler h3 = titre de la formation */
+.formation-left h3 {
+    font-size: 19px;
+    color: white;
+    font-weight: 700;
+    margin-bottom: 5px;
+    margin-top: 5px;
+}
+
+/* Cibler la div picto-localisation et lieu */
+.formation-left div:nth-child(5), .derniere-formation div:nth-child(4) {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: flex-start;
+    gap: 5px;
+    font-size: 15px;
+    margin-top: 10px;
+}
+
+/* Localisation de la formation */
+.formation-left p {
+    color: white;
+    font-size: 15px;
+    margin-bottom: 12px;
+    font-weight: 400;
+}
+
+/* Bouton En savoir + */
+.btn-en-savoir-plus-formation {
+    background: linear-gradient(90deg, #FD695D 0%, #FF2D87 100%);
+    border-radius: 4px;
+    color: white;
+    font-size: 15px;
+    font-weight: 700;
+    border: none;
+    padding: 10px 15px;
+    text-decoration: none;
+    display: inline-block;
+}
+
+/* Forme de la courbe rose pour les formations à gauche */
+#forme-courbe {
+    position: absolute;
+    top: 88%;
+    left: 38%;
+    fill: none;
+}
+
+/* Forme de la courbe rose pour les formations à droite */
+#forme-courbe-right {
+    position: absolute;
+    top: 88%;
+    right: 35%;
+    fill: none;
 }
