--- a/header/header.css
+++ b/header/header.css
@@ -1,11 +1,15 @@
+html {
+    scroll-behavior: smooth;
+}
+
 /* Menu mobile */
 
 header {
+    width: 100%;
     height: 77px;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: #000000b3;
     position: fixed; /* Set the navbar to fixed position */
     top: 0; /* Position the navbar at the top of the page */
-    width: 100%;
     overflow: hidden;
     z-index: 100;
 }
@@ -18,8 +22,9 @@ header {
 }
 
 .navbar-mobile .burger {
-    /* color: white; */
     z-index: 100;
+    object-fit: cover;
+    width: 40px;
 }
 
 /* Taille du picto menu-burger qui se modifie au click*/
@@ -28,7 +33,7 @@ header {
 }
 
 /*Fenetre modale au click*/
-.modal{
+.modal-nav {
     background-color: rgba(0, 0, 0, 0.9);
     width: 100%;
     height: 100vh;
@@ -42,23 +47,18 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap:3rem;
+    gap: 20px;
 }
 
-/*CSS à afficher lors du clique sur burger (JS)*/
-.modal.show-modal{
-    left:0%;
+/*CSS à afficher lors du click sur burger (JS)*/
+.modal-nav.show-modal{
+    left: 0%;
 }
 
-/* .burger.show-modal{
-    position: fixed;
-    top:1rem;
-} */
-
-.modal a{
-    font-size: 2rem;
+.modal-nav a{
+    font-size: 22px;
+    font-family: 'Montserrat', 'sans-serif';
     color: #FF3184;
-    /* color: var(--purple); */
     text-decoration: none;
     font-weight: 500;
 }
