--- a/section-about-me/about-me.css
+++ b/section-about-me/about-me.css
@@ -1,47 +1,21 @@
-/* ----------- Section 2 : Quelques mots sur moi --------------- */
-
 #about-me {
-    padding-top: 100px;
-    padding-right: 32px;
-    padding-left: 32px;
-    padding-bottom: 70px;
-    position: relative;
+    margin-top: 70px;
+    /* margin-bottom: 70px; */
 }
 
-/* #about-me h2 {
-    color: #E4BFE1;
-    font-size: 20px;
+#about-me h2 {
+    font-family: 'Inter', sans-serif;
+    color: #F8AFC0;
+    font-size: 25px;
     font-weight: 600;
-    margin-bottom: 22px;
-} */
+    margin-bottom: 50px;
+}
 
 #about-me p {
     color: #FFF;
     text-align: justify;
-    font-size: 15px;
+    font-family: 'Inter', sans-serif;
+    font-size: 17px;
     font-weight: 400;
     line-height: 144.017%;
-    margin-bottom: 22px;
-}
-
-/* Cercle rose et carré vert */
-.circle-pink {
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    border: 2px solid #FD6261;
-    top: 31px;
-    right: 46px;
-}
-
-.carre-rose {
-    position: absolute;
-    bottom: 112px;
-    left: 55px;
-    width: 31px;
-    height: 31px;
-    transform: rotate(35.826deg);
-    border: 2px solid #FF3481;
-    top: 95%;
 }
