--- a/section-formation/formation.css
+++ b/section-formation/formation.css
@@ -1,4 +1,21 @@
-/* --------- Section Formation Modifié ------------- */
+#formation {
+    position: relative;
+    /* margin-bottom: 70px; */
+}
+
+#formation h2 {
+    font-family: 'Inter', sans-serif;
+    color: #F8AFC0;
+    font-size: 25px;
+    font-weight: 600;
+    margin-top: 100px;
+}
+
+@media screen and (min-width: 992px) {
+    #formation h2 {
+        text-align: center;
+    }
+}
 
 #cercle-shadow-purple-formation {
     position: absolute;
@@ -6,7 +23,7 @@
     background: #542897; 
     width: 585px;
     height: 585px;
-    top: 2400px;
+    top: 2500px;
     left: 191px;
     filter: blur(182px);
     overflow: hidden;
@@ -19,27 +36,55 @@
     background: #B43B85;
     width: 585px;
     height: 585px;
-    top: 3300px;
+    bottom: 1500px;
     right: 277px;
     filter: blur(182px);
     overflow: hidden;
     z-index: -1;
 }
 
-.formation {
-    position: relative;
-    padding-top: 100px;
-    padding-bottom: 0px;
-    padding-right: 25px;
-    padding-left: 25px;
+@media screen and (min-width: 630px) and (max-width: 768px) {
+    #cercle-shadow-purple-formation {
+        top: 2400px;
+        left: 400px;
+    }
+
+    #cercle-shadow-pink-formation {
+        bottom: 1400px;
+        right: 400px;
+    }
 }
 
-.liste-formation {
+@media screen and (min-width: 1024px) {
+    #cercle-shadow-purple-formation {
+        display: none;
+    }
+
+    #cercle-shadow-pink-formation {
+        display: none;
+    }
+}
+
+/* ------- Mise en page de la liste des formations : taille écran téléphone -----*/
+
+@media screen and (max-width: 992px) {
+    #liste-formation-ecran-desktop {
+        display: none;
+    }
+}
+
+.liste-formation-phone {
     margin-top: 50px;
     display: flex;
     flex-wrap: wrap;
     gap: 60px;
 }
+
+/* @media screen and (min-width: 992px) {
+    #liste-formation {
+        justify-content: center;
+    }
+} */
 
 .formation-left {
     flex: 1;
@@ -119,9 +164,9 @@
     border-radius: 4px;
     color: white;
     font-size: 15px;
-    font-weight: 700;
+    font-weight: 600;
     border: none;
-    padding: 10px 15px;
+    padding: 8px 15px;
     text-decoration: none;
     display: inline-block;
 }
@@ -140,4 +185,101 @@
     top: 88%;
     right: 35%;
     fill: none;
+}
+
+/* ---------- Mise en page liste des formations format desktop ---------- */
+
+@media screen and (min-width: 992px) {
+    #liste-formation-phone {
+        display: none;
+    }
+}
+
+.liste-formation-ecran-desktop {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 40px;
+    margin-top: 40px;
+}
+
+.container-formation {
+    flex: 1;
+    min-width: 45%;
+    /* max-width: 100%; */
+}
+
+.container-formation div:first-child {
+    display: flex;
+    align-items: flex-start;
+    gap: 20px;
+}
+
+.container-formation div:first-child div:first-child {
+    position: relative;
+    background-color: black;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+}
+
+.container-formation div div:first-child span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #FF2D87;
+    font-family: 'Inter', sans-serif;
+    font-size: 22px;
+    font-weight: 700;
+}
+
+.container-formation div div:nth-child(2) span:first-child {
+    color: white;
+    font-size: 15px;
+    font-weight: 300;
+}
+
+.container-formation h3 {
+    font-size: 19px;
+    color: white;
+    font-weight: 700;
+    margin-bottom: 5px;
+    margin-top: 5px;
+    width: 450px;
+}
+
+@media screen and (max-width: 1200px) {
+
+    .container-formation {
+        min-width: 100%;
+    }
+    
+    .container-formation h3 {
+        max-width: 100%;
+    }
+}
+
+@media screen and (min-width: 1200px) and (max-width: 1400px) {
+    
+    .container-formation h3 {
+        max-width: 350px;
+    }
+}
+
+.container-formation div div:nth-child(2) div:nth-child(3) {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: flex-start;
+    gap: 5px;
+    font-size: 15px;
+    margin-top: 10px;
+}
+
+.container-formation div div:nth-child(2) div:nth-child(3) span {
+    color: white;
+    font-size: 15px;
+    margin-bottom: 12px;
+    font-weight: 400;
 }
