--- a/section-experience/experience.css
+++ b/section-experience/experience.css
@@ -1,198 +1,7 @@
-/* .modal-experience {
-    display: none;
+/* #experience {
+    margin-top: 70px;
+    margin-bottom: 70px;
 } */
-
-/*Fenetre modale au click*/
-.modal-experience {
-    background-color: #F9D3E8;
-    /* border-top: 5px solid #342039; */
-    width: 100%;
-    height: 50%;
-
-    position: fixed;
-    top: 100%;
-    left: 0%;
-    transition: top 1s;
-
-    padding: 20px;
-    padding-top: 0px;
-}
-
-/*CSS à afficher lors du clique sur burger (JS)*/
-.show-modal-experience{
-    top:50%;
-}
-
-/* Style de la modale */
-
-.modal-experience div:first-child {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 20px;
-}
-
-/* Picto close modal */
-#picto-close-edf {
-    width: 50px;
-    height: 50px;
-    opacity: 50%;
-}
-
-#picto-close-mountnpass {
-    width: 40px;
-    height: 40px;
-    opacity: 50%;
-}
-
-.modal-experience h3 {
-    font-size: 18px;
-    color: #342039;
-    margin-bottom: 10px;
-    margin-top: 5px;
-}
-
-/*Pictogramme de localisation*/
-#picto-localisation-exp {
-    width: 16px;
-    height: 16px;
-    transform: rotate(0deg);
-}
-
-.modal-experience span {
-    font-size: 15px;
-    font-weight: 500;
-    /* margin-bottom: 10px; */
-}
-
-.modal-experience div:nth-child(4) {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    margin-bottom: 20px;
-    gap: 2px;
-}
-
-.modal-experience h4 {
-    font-size: 16px;
-    /* margin-top: 10px; */
-}
-
-.modal-experience ul {
-    padding: 20px;
-    padding-top: 10px;
-    padding-bottom: 0px;
-    font-size: 15px;
-    color: #342039;
-}
-
-/* ----- Mise en forme des containers ----- */
-
-.formation-experience {
-    position: relative;
-    padding-top: 100px;
-    padding-bottom: 0px;
-    padding-right: 25px;
-    padding-left: 25px;
-    overflow: hidden;
-}
-
-/* .formation-experience h2 {
-    color: #E4BFE1;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 30px;
-} */
-
-.liste-formation-experience {
-    display: flex;
-    flex: wrap;
-    flex-direction: column;
-    gap: 15px;
-}
-
-.container {
-    flex: 1;
-    min-width: 100%;
-    max-width: 100%;
-    /* min-height: 150px;
-    max-height: 150px; */
-    /* background-color: white; */
-    background-color: rgb(241, 241, 241);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
-    padding: 16px;
-    border-radius: 5px;
-}
-
-/* .box-purple {
-    background-color: #F9D3E8;
-} */
-
-.container + div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /* gap: 50px; */
-}
-
-.container span {
-    color: #342039;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 13px;
-    font-weight: 500;
-}
-
-.container h3 {
-    color: #342039;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 15px;
-    font-weight: 700;
-    line-height: 25px;
-    margin-top: 5px;
-    margin-bottom: 15px;
-    width: 100%;
-}
-
-.container div:nth-child(2) {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.container a {
-    display: block;
-    border-radius: 4px;
-    background: linear-gradient(90deg, #FD695D 0%, #FF2D87 100%);
-    padding: 9px;
-    color: white;
-    font-size: 12px;
-    width: 90px;
-    font-weight: 700;
-    text-decoration: none;
-    text-align: center;
-    font-family: 'Montserrat', 'sans-serif';
-}
-
-.container img {
-    object-fit: contain;
-}
-
-
-#cercle-shadow-pink-experience {
-    position: absolute;
-    border-radius: 585px;
-    background: #B43B85;
-    width: 585px;
-    height: 585px;
-    top: 2400px;
-    left: 250px;
-    filter: blur(150px);
-    overflow: hidden;
-    z-index: -1;
-}
 
 #cercle-shadow-purple-experience {
     position: absolute;
@@ -200,9 +9,138 @@
     background: #542897; 
     width: 585px;
     height: 585px;
-    top: 3000px;
-    right: 145px;
+    bottom: 600px;
+    left: 191px;
     filter: blur(182px);
     overflow: hidden;
     z-index: -1;
+}
+
+@media screen and (min-width: 630px) and (max-width: 768px) {
+    #cercle-shadow-purple-experience {
+        left: 400px;
+        bottom: -100px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    #cercle-shadow-purple-experience {
+        left: 240px;
+        bottom: 500px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    #cercle-shadow-purple-experience {
+        left: 800px;
+        bottom: -200px;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    #cercle-shadow-purple-experience {
+        left: 1100px;
+        bottom: -200px;
+    }
+}
+
+#experience h2 {
+    font-family: 'Inter', sans-serif;
+    color: #F8AFC0;
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 50px;
+    margin-top: 100px;
+}
+
+@media screen and (min-width: 992px) {
+    #experience h2 {
+            text-align: center;
+        }
+}
+
+.liste-experience {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    gap: 15px;
+}
+
+/* ----- Mise en forme des containers pour les écrans de téléphone ----- */
+
+.container-experience {
+    flex: 1;
+    min-width: 100%;
+    max-width: 100%;
+    background-color: #180323;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    padding: 16px;
+    border-radius: 10px;
+}
+
+@media screen and (min-width: 992px) {
+    .container-experience {
+        min-width: 45%;
+        max-width: 45%;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .container-experience {
+        min-width: 30%;
+        max-width: 30%;
+    }
+}
+
+.container-experience span {
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+}
+
+.container-experience h3 {
+    color: #FF2D87;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 25px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    width: 100%;
+}
+
+.container-experience div:nth-child(3) {
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.container-experience p {
+    color: #FFF;
+    font-size: 15px;
+    font-weight: 400;
+}
+
+.container-experience button {
+    margin-top: 27px;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 4px;
+    /* background: linear-gradient(90deg, #FD695D 0%, #FF2D87 100%); */
+    color: white;
+    font-size: 12px;
+    width: 150px;
+    height: 45px;
+    font-weight: 600;
+    text-decoration: none;
+    font-family: 'Montserrat', 'sans-serif';
+    border: 1px solid #FF2D87;
+}
+
+.container-experience button svg {
+    fill: none;
 }
