--- a/section-portfolio/portfolio.css
+++ b/section-portfolio/portfolio.css
@@ -1,35 +1,35 @@
 /* ----------- Section 5 : Mes projets --------------- */
 
 #projets {
-    /* background-color: #342039; */
-    padding-right: 25px;
-    padding-left: 25px;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    /* margin-top: 100px; */
+    margin-bottom: 40px;
 }
 
-/* #projets h2 {
-    color: #E4BFE1;
+#projets h2 {
+    font-family: 'Inter', sans-serif;
+    color: hsl(346, 84%, 83%);
+    font-size: 25px;
     font-weight: 600;
-    font-size: 20px;
-    margin-bottom: 20px;
-} */
+    margin-bottom: 30px;
+    margin-top: 100px;
+}
 
 #projets-phrase-accroche {
     color: white;
     text-align: justify;
-    font-size: 15px;
+    font-family: 'Inter', sans-serif;
+    font-size: 17px;
     margin-bottom: 33px;
     line-height: 144.017%;
-    /* font-family: 'Inter', 'sans-serif'; */
+    font-weight: 400;
 }
 
 /* Liste des projets */
 #liste-projets {
     display: flex;
-    flex: wrap;
-    flex-direction: column;
-    gap: 33px;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 30px;
 }
 
 .container-projet {
@@ -38,52 +38,118 @@
     max-width: 100%;
 }
 
+@media screen and (min-width: 768px) {
+    .container-projet {
+        min-width: 47%;
+        max-width: 47%;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .container-projet {
+        min-width: 35%;
+        max-width: 35%;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .container-projet {
+        min-width: 25%;
+        max-width: 25%;
+    }
+}
+
 .container-projet div:first-child {
     background: linear-gradient(91deg, #C1CAD5 2.23%, #F8F8F8 98.83%);
     border-radius: 15px 15px 0px 0px;
-    width: 100%;
-    height: 242px;
+    padding: 10px;
+    height: 250px;
     text-align: center;
 }
 
+@media screen and (min-width: 375px) {
+    .container-projet div:first-child {
+        height: 230px;
+    }
+}
+
+@media screen and (min-width: 395px) {
+    .container-projet div:first-child {
+        height: 255px;
+    }
+}
+
+@media screen and (min-width: 425px) {
+    .container-projet div:first-child {
+        height: 270px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .container-projet div:first-child {
+        height: 230px;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .container-projet div:first-child {
+        height: 240px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .container-projet div:first-child {
+        height: 200px;
+    }
+}
+
+@media screen and (min-width: 1400px) {
+    .container-projet div:first-child {
+        height: 240px;
+    }
+}
+
 .container-projet div:first-child img {
-    max-width: 100%;
-    height: auto;
+    width: 90%;
+    object-fit: cover;
+    border-radius: 15px 15px 0px 0px;
 }
 
 #description-projet {
     background: linear-gradient(89deg, #AE3A86 0.2%, #642B94 98.54%);
+    
+    /* background: linear-gradient(89deg, #FF2D87 0.2%, #FD695D 98.54%); */
     border-radius: 0px 0px 10px 10px;
     padding: 10px 15px;
+    height: 80px;
 }
 
 #description-projet h3 {
     font-weight: 700;
     color: white;
-    font-size: 17px;
+    font-size: 20px;
     margin-bottom: 5px;
 }
 
-#description-projet p {
-    color: white;
-    line-height: 18px;
-    font-size: 15px;
-}
-
-#description-projet div {
+/* #description-projet div {
     display: flex;
-    gap: 0px;
+    gap: 20px;
     justify-content: flex-end;
     align-items: center;
+} */
+
+#description-projet p {
+    color: white;
+    font-size: 17px;
+    font-family: 'Montserrat', sans-serif;
+    line-height: 144.017%;
+    font-weight: 400;
+    text-align: start;
 }
 
 #projet-button-plus {
-    background-color: transparent;
+    /* background-color: transparent; */
     border: none;
-    width: 50px;
+    width: 100px;
     padding: 0px;
-}
-
-#description-projet img {
-    object-fit: cover;
 }
